--- a/src/app/addPreTime/addPreTime.component.html
+++ b/src/app/addPreTime/addPreTime.component.html
@@ -9,7 +9,7 @@
               >Insert Time Name</label
             >
           </div>
-          <input type="text" aria-label="First name" class="form-control" />
+          <input type="text" aria-label="nome" class="form-control" />
         </div>
 
         <div class="input-group mb-3">
