--- a/src/app/editDeleteTime/editDeleteTime.component.html
+++ b/src/app/editDeleteTime/editDeleteTime.component.html
@@ -13,36 +13,27 @@
             class="custom-select"
             id="inputGroupSelect01"
             (change)="onTimeChange($event)"
+            [(ngModel)]="selectedTempoId"
           >
-            <option
-              *ngFor="let linha of triatlo"
-              [value]="linha"
-              [selected]="linha === 'Triatlo Olímpico'"
-            >
-              {{ linha }}
+            <option *ngFor="let tempo of tempos" [value]="tempo.ID">
+              {{ tempo.Nome }} - Total: {{ tempo.Total }}
             </option>
           </select>
         </div>
 
         <div class="input-group mb-3">
           <div class="input-group-prepend">
-            <label class="input-group-text" for="inputGroupSelect01"
+            <label class="input-group-text" for="inputGroupSelect02"
               >Tipo de Triatlo</label
             >
           </div>
           <select
             class="custom-select"
-            id="inputGroupSelect01"
-            (change)="onTriatloChange($event)"
+            id="inputGroupSelect02"
+            [(ngModel)]="tipoTriatloNome"
             disabled
           >
-            <option
-              *ngFor="let linha of triatlo"
-              [value]="linha"
-              [selected]="linha === 'Triatlo Olímpico'"
-            >
-              {{ linha }}
-            </option>
+            <option>{{ tipoTriatloNome }}</option>
           </select>
         </div>
 
@@ -193,13 +184,7 @@
             />
           </div>
         </div>
-        <div
-          class="option"
-          style="
-            border-bottom-left-radius: 10px;
-            border-bottom-right-radius: 10px;
-          "
-        >
+        <div class="option">
           <label for="run"
             >Running Time <span>[{{ distancias[2] }}]</span></label
           >
@@ -236,24 +221,33 @@
             />
           </div>
         </div>
-      </div>
-      <div class="buttons m-1 d-flex justify-content-center">
-        <button type="button" class="btn btn-success m-2" (click)="editTime()">
-          Edit Time
-        </button>
-        <button type="button" class="btn btn-danger m-2" (click)="deleteTime()">
-          Delete Time
-        </button>
-      </div>
 
-      <div class="d-flex">
-        <button
-          type="button"
-          class="btn btn-warning mt-2 ml-auto"
-          routerLink=""
-        >
-          Go back
-        </button>
+        <div class="buttons m-1 d-flex justify-content-center">
+          <button
+            type="button"
+            class="btn btn-success m-2"
+            (click)="editTime()"
+          >
+            Edit Time
+          </button>
+          <button
+            type="button"
+            class="btn btn-danger m-2"
+            (click)="deleteTime()"
+          >
+            Delete Time
+          </button>
+        </div>
+
+        <div class="d-flex">
+          <button
+            type="button"
+            class="btn btn-warning mt-2 ml-auto"
+            routerLink=""
+          >
+            Go back
+          </button>
+        </div>
       </div>
     </div>
   </div>
