--- a/src/app/personalTime/personalTime.component.scss
+++ b/src/app/personalTime/personalTime.component.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -67,4 +68,7 @@ html, body {
 
 .text-danger {
   color: red;
+}
+input {
+  text-align: right;
 }
