--- a/src/app/preTimeTest/preTimeTest.component.scss
+++ b/src/app/preTimeTest/preTimeTest.component.scss
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
@@ -28,7 +29,6 @@ html, body {
   margin-bottom: 10px;
   margin-top: 10px;
   text-align: center;
-  
 }
 
 .menu-content {
@@ -68,4 +68,8 @@ html, body {
 
 .text-danger {
   color: red;
+}
+
+input {
+  text-align: right;
 }
