--- a/src/app/addPreTime/addPreTime.component.html
+++ b/src/app/addPreTime/addPreTime.component.html
@@ -49,7 +49,7 @@
               #natacao1h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="natacao1m">Minutes</label>
             <input
@@ -59,7 +59,7 @@
               #natacao1m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="natacao1s">Seconds</label>
             <input
@@ -84,7 +84,7 @@
               #t11h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t11m">Minutes</label>
             <input
@@ -94,7 +94,7 @@
               #t11m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="t11s">Seconds</label>
             <input
@@ -121,7 +121,7 @@
               #ciclismo1h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="ciclismo1m">Minutes</label>
             <input
@@ -131,7 +131,7 @@
               #ciclismo1m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="ciclismo1s">Seconds</label>
             <input
@@ -156,7 +156,7 @@
               #t21h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t21m">Minutes</label>
             <input
@@ -166,7 +166,7 @@
               #t21m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="t21s">Seconds</label>
             <input
@@ -199,7 +199,7 @@
               #run1h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="run1m">Minutes</label>
             <input
@@ -209,7 +209,7 @@
               #run1m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="run1s">Seconds</label>
             <input
@@ -229,7 +229,9 @@
           Add New Time
         </button>
       </div>
-
+      <div *ngIf="errorMessage" class="alert alert-danger">
+        {{ errorMessage }}
+      </div>
       <div class="d-flex">
         <button
           type="button"
