--- a/src/app/personalTime/personalTime.component.html
+++ b/src/app/personalTime/personalTime.component.html
@@ -41,7 +41,7 @@
               #natacao1h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="natacao1m">Minutes</label>
             <input
@@ -51,7 +51,7 @@
               #natacao1m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="natacao1s">Seconds</label>
             <input
@@ -76,7 +76,7 @@
               #t11h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t11m">Minutes</label>
             <input
@@ -86,7 +86,7 @@
               #t11m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="t11s">Seconds</label>
             <input
@@ -113,7 +113,7 @@
               #ciclismo1h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="ciclismo1m">Minutes</label>
             <input
@@ -123,7 +123,7 @@
               #ciclismo1m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="ciclismo1s">Seconds</label>
             <input
@@ -148,7 +148,7 @@
               #t21h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t21m">Minutes</label>
             <input
@@ -158,7 +158,7 @@
               #t21m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="t21s">Seconds</label>
             <input
@@ -177,6 +177,7 @@
           style="
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
+            padding-bottom: 10px;
           "
         >
           <label for="run"
@@ -191,7 +192,7 @@
               #run1h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="run1m">Minutes</label>
             <input
@@ -201,7 +202,7 @@
               #run1m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="run1s">Seconds</label>
             <input
@@ -236,7 +237,7 @@
               #natacao2h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="natacao2m">Minutes</label>
             <input
@@ -246,7 +247,7 @@
               #natacao2m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="natacao2s">Seconds</label>
             <input
@@ -271,7 +272,7 @@
               #t12h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t12m">Minutes</label>
             <input
@@ -281,7 +282,7 @@
               #t12m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="t12s">Seconds</label>
             <input
@@ -308,7 +309,7 @@
               #ciclismo2h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="ciclismo2m">Minutes</label>
             <input
@@ -318,7 +319,7 @@
               #ciclismo2m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="ciclismo2s">Seconds</label>
             <input
@@ -343,7 +344,7 @@
               #t22h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t22m">Minutes</label>
             <input
@@ -353,7 +354,7 @@
               #t22m
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="t22s">Seconds</label>
             <input
@@ -372,6 +373,7 @@
           style="
             border-bottom-left-radius: 10px;
             border-bottom-right-radius: 10px;
+            padding-bottom: 10px;
           "
         >
           <label for="run2h"
@@ -386,7 +388,7 @@
               #run2h
               required
               min="0"
-              max="1440"
+              max="48"
             />
             <label for="run2m">Minutes</label>
             <input
@@ -396,7 +398,7 @@
               #run2m
               required
               min="0"
-              max="1440"
+              max="59"
             />
             <label for="run2s">Seconds</label>
             <input
@@ -477,7 +479,9 @@
           Reset
         </button>
       </div>
-
+      <div *ngIf="errorMessage" class="alert alert-danger">
+        {{ errorMessage }}
+      </div>
       <div class="d-flex">
         <button
           type="button"
