sql and css changes

--- a/src/app/addPreTime/addPreTime.component.html
+++ b/src/app/addPreTime/addPreTime.component.html
@@ -15,7 +15,7 @@
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <label class="input-group-text" for="inputGroupSelect01"
-              >Tipo de Triatlo</label
+              >Type of Triathlon</label
             >
           </div>
           <select
