--- a/src/app/editDeleteTime/editDeleteTime.component.html
+++ b/src/app/editDeleteTime/editDeleteTime.component.html
@@ -24,7 +24,7 @@
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <label class="input-group-text" for="inputGroupSelect02"
-              >Tipo de Triatlo</label
+              >Type of Triathlon</label
             >
           </div>
           <select
