--- a/src/app/preTimeTest/preTimeTest.component.html
+++ b/src/app/preTimeTest/preTimeTest.component.html
@@ -24,7 +24,7 @@
         <div class="input-group mb-3">
           <div class="input-group-prepend">
             <label class="input-group-text" for="inputGroupSelect02"
-              >Tipo de Triatlo</label
+              >Type of Triathlon</label
             >
           </div>
           <select
@@ -438,24 +438,44 @@
             </thead>
             <tbody>
               <tr>
-                <td>#1st Time</td>
-                <td>{{ formatTime(tempo1.natacao) }}</td>
-                <td>{{ formatTime(tempo1.t1) }}</td>
-                <td>{{ formatTime(tempo1.ciclismo) }}</td>
-                <td>{{ formatTime(tempo1.t2) }}</td>
-                <td>{{ formatTime(tempo1.run) }}</td>
+                <td><strong>#1st Time</strong></td>
+                <td [ngClass]="getTimeClass(tempo1.natacao, tempo2.natacao)">
+                  {{ formatTime(tempo1.natacao) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo1.t1, tempo2.t1)">
+                  {{ formatTime(tempo1.t1) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo1.ciclismo, tempo2.ciclismo)">
+                  {{ formatTime(tempo1.ciclismo) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo1.t2, tempo2.t2)">
+                  {{ formatTime(tempo1.t2) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo1.run, tempo2.run)">
+                  {{ formatTime(tempo1.run) }}
+                </td>
               </tr>
               <tr>
-                <td>#2nd Time</td>
-                <td>{{ formatTime(tempo2.natacao) }}</td>
-                <td>{{ formatTime(tempo2.t1) }}</td>
-                <td>{{ formatTime(tempo2.ciclismo) }}</td>
-                <td>{{ formatTime(tempo2.t2) }}</td>
-                <td>{{ formatTime(tempo2.run) }}</td>
+                <td><strong>#2nd Time</strong></td>
+                <td [ngClass]="getTimeClass(tempo2.natacao, tempo1.natacao)">
+                  {{ formatTime(tempo2.natacao) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo2.t1, tempo1.t1)">
+                  {{ formatTime(tempo2.t1) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo2.ciclismo, tempo1.ciclismo)">
+                  {{ formatTime(tempo2.ciclismo) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo2.t2, tempo1.t2)">
+                  {{ formatTime(tempo2.t2) }}
+                </td>
+                <td [ngClass]="getTimeClass(tempo2.run, tempo1.run)">
+                  {{ formatTime(tempo2.run) }}
+                </td>
               </tr>
               <tr></tr>
               <tr>
-                <td>Splits</td>
+                <td><strong>Splits Difference</strong></td>
                 <td>{{ diferenca.natacao }}</td>
                 <td>{{ diferenca.t1 }}</td>
                 <td>{{ diferenca.ciclismo }}</td>
@@ -463,7 +483,7 @@
                 <td>{{ diferenca.run }}</td>
               </tr>
               <tr>
-                <td><strong>Total time</strong></td>
+                <td><strong>Total time difference</strong></td>
                 <td
                   [ngClass]="{
                     'text-success': tempoGanho > 0,
@@ -477,6 +497,11 @@
               </tr>
             </tbody>
           </table>
+          <small>
+            <strong>*Obs:</strong>
+            <span style="color: green"> Green color</span> identifies the
+            quicker split.</small
+          >
         </div>
 
         <div class="buttons m-1 d-flex justify-content-center">
