translation types of triathlon

--- a/src/app/addPreTime/addPreTime.component.html
+++ b/src/app/addPreTime/addPreTime.component.html
@@ -26,7 +26,7 @@
             <option
               *ngFor="let linha of triatlo"
               [value]="linha"
-              [selected]="linha === 'Triatlo Olímpico'"
+              [selected]="linha === 'Olympic Triathlon'"
             >
               {{ linha }}
             </option>
