--- a/src/app/editDeleteTime/editDeleteTime.component.html
+++ b/src/app/editDeleteTime/editDeleteTime.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="card">
-    <h1 class="card-title mt-5">Triathlon App</h1>
+    <h1 class="card-title mt-5" id="cubed">Manage your Times</h1>
     <div class="menu-content">
       <div class="input1">
         <div class="input-group mb-3">
