--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="card">
-    <h1 class="card-title mb-3" id="cubed">Triathlon App</h1>
+    <h1 class="card-title mb-3" id="cubed"><strong>Triathlon App</strong></h1>
+    <img
+      src="../../assets/triathloncor.png"
+      alt="triathlon"
+      class="img-responsive"
+    />
     <div class="opcao">
       <button
         type="button"
