--- a/src/app/personalTime/personalTime.component.html
+++ b/src/app/personalTime/personalTime.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="card">
     <div class="menu-content">
-      <h1 class="card-title mb-3">Triathlon App</h1>
+      <h1 class="card-title mb-3" id="cubed">Let's get Real</h1>
 
       <div class="input1">
         <div class="input-group mb-3">
